--- a/Bangazon/Bangazon/Bangazon.csproj
+++ b/Bangazon/Bangazon/Bangazon.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="PaymentOption.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Terminal.cs" />
