--- a/Bangazon/Bangazon/Bangazon.csproj
+++ b/Bangazon/Bangazon/Bangazon.csproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
+    <Compile Include="CustomerOrder.cs" />
+    <Compile Include="OrderProducts.cs" />
     <Compile Include="PaymentOption.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
